# arch-checkfw

./: .gitignore  README.md  pyproject.toml
src/: arch_checkfw.py
